# plutus-template

./: cabal.project  flake.nix
plutus-example/: plutus-example.cabal
plutus-example/src/PlutusExample/: FortyTwo.hs
