cabal-version: 3.0
name:          plutus-example
version:       0.1.0.0
license:
author:        Joe
maintainer:    joe@example.com
build-type:    Simple

common warnings
  ghc-options: -Wall

common common-all
  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-crypto-class
    , containers
    , data-default
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise
    , text

  -- , cardano-api
  --, plutus-ledger
  --, plutus-ledger-constraints
  --, plutus-script-utils
  default-language: Haskell2010

  -- TODO: should we put all extensions in the file to make it explicit we're using them?
  --default-extensions: NoImplicitPrelude
  --OverloadedStrings
  --TypeApplications
  --ImportQualifiedPost
  --BangPatterns
  --LambdaCase
  --ScopedTypeVariables


  ghc-options:
    -Wall -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr
    -fno-specialise -fexpose-all-unfoldings -fplugin-opt
    PlutusTx.Plugin:defer-errors

common common-all-tests
  import:        common-all
  build-depends:
    , plutus-simple-model
    , QuickCheck
    , tasty

library
  import:          common-all
  hs-source-dirs:  src
  exposed-modules: PlutusExample.FortyTwo

executable plutus-example
  import:           warnings
  main-is:          Main.hs
  build-depends:    base
  hs-source-dirs:   app
  default-language: Haskell2010
